--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 <script>
 const API_URL = "https://calroiesinfoms-production.up.railway.app";
-const N8N_WEBHOOK = "ТВОЙ_WEBHOOK_СЮДА";  // обнови
+const N8N_WEBHOOK = "https://shibakovk.app.n8n.cloud/webhook/food_log";
 
 let selectedProduct = null;
 
